2000-07-03  Dan Winship  <danw@helixcode.com>

	* camel-folder-summary.c (message_info_new): Parse In-Reply-To
	with header_references_decode, not header_msgid_decode.

	* camel-mime-message.c (camel_mime_message_class_init): message
	headers are case-insensitive.

	* providers/pop3/camel-pop3-store.c (camel_pop3_command): Fix a
	bug in error-setting code.
	(pop3_connect): Don't re-prompt for password in the KPOP case.
	(pop3_get_response): New function, split out from
	camel_pop3_command.
	(connect_to_server): Use pop3_get_response to parse the greeting
	message, and error out appropriately if it's -ERR.

2000-07-02  Dan Winship  <danw@helixcode.com>

	* camel-folder.c (camel_folder_freeze, camel_folder_thaw): New
	functions to freeze and thaw a folder (to prevent message/folder
	changed signals in the middle of a long series of operations).
	(camel_folder_class_init): Change signals to GTK_RUN_FIRST.
	(message_changed, folder_changed): Add default implementations
	that stop the emission and record info for later if the folder is
	frozen.

	* providers/mbox/camel-mbox-folder.c (mbox_sync): leftover fixes
	from the close->sync change: don't destroy the ibex, summary, and
	search when syncing.
	(append_message): emit "folder_changed" on a successful append.

2000-07-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* camel-mime-utils.c (uudecode_step): A rather complex uudecoder
	written in the spirit of Zucchi-ness, is it up to par? Only the 
	Z-man can tell us :-)

2000-07-01  Dan Winship  <danw@helixcode.com>

	* camel-service.c (camel_service_get_name): New method, to return
	an end-user-friendly name corresponding to a service. (eg, "POP
	service for danw on trna.helixcode.com").

	* providers/imap/camel-imap-store.c,
	providers/mbox/camel-mbox-store.c,
	providers/nntp/camel-nntp-store.c,
	providers/pop3/camel-pop3-store.c,
	providers/sendmail/camel-sendmail-transport.c,
	providers/smtp/camel-smtp-transport.c: Implement.
