@@ -1,3 +1,7 @@
+2000-07-03  Ettore Perazzoli  <ettore@helixcode.com>
+
+	* camel-folder-summary.c (camel_folder_summary_set_uid): Removed.
+
 2000-07-03  Dan Winship  <danw@helixcode.com>
 
 	* camel-folder-summary.c (message_info_new): Parse In-Reply-To
